listen on all addresses

--- a/templates/postgresql.conf.j2
+++ b/templates/postgresql.conf.j2
@@ -7,6 +7,10 @@ ident_file = '/etc/postgresql/{{ postgresql.version }}/main/pg_ident.conf'
 
 external_pid_file = '/var/run/postgresql/{{ postgresql.version }}-main.pid'
 
+{% if group_env == 'local' %}
+listen_addresses = '*'
+{% endif %}
+
 port = {{ postgresql.port }}
 
 max_connections = {{ postgresql.max_connections }}
